[metadata]
name = dhbw
version = attr: dhbw.__version__
author = Juergen Hock
author_email = juergen.hock@jurihock.de
url = https://github.com/jurihock/dhbw-python
description = DHBW lecture accompanying Python package.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_file = LICENSE
keywords =
    digital
    audio
    signal
    processing
    dasp
    dhbw
    python
classifiers =
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Topic :: Education
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Sound Synthesis

[options]
packages = dhbw, dhbw.dasp
python_requires = >=3
install_requires =
    click
    matplotlib
    numpy
    scipy
